Upgrade to openapi-generator-version 3.3.4. Allows to skip java code generation when no changes in OpenAPI spec. Requires real object schemas as returned responses (and not just an array type).
